--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,2 +1,20 @@
-<h1>People#show</h1>
-<p>Find me in app/views/people/show.html.erb</p>
+<div class="ui card">
+  <div class="image">
+    <img src="https://robohash.org/<%= @person.avatar %>?set=4" />
+  </div>
+  <div class="content">
+    <p class="header">
+      <%= @person.first_name %> <%= @person.last_name %>
+    </p>
+    <div class="meta">
+      <span class="date"><%= @person.phone %></span>
+    </div>
+    <div class="description">
+      <%= @person.email %>
+    </div>
+  </div>
+  <div class="extra content">
+   <%= link_to 'Edit', edit_person_path(@person) %> |
+   <%= link_to 'Back', people_path %>
+  </div>
+</div>
